Stop category toggle checkboxes from moving when they are expanded/collapsed.

--- a/www/htdocs/css/index.css
+++ b/www/htdocs/css/index.css
@@ -332,6 +332,10 @@ h3 {
 	text-align:right;
 }
 
+.togglebutton input {
+	margin:2px;
+}
+
 .offset .togglebutton {
 	width:16px;
 }
